# zwm

./: CMakeLists.txt  ChangeLog  LICENSE  readme.md  zwm.1
examples/: config
man/: zstatus.1  zwm.1
src/: .winmgr.cc.swp  CMakeLists.txt  bind.cc  bind.h  binding.cc  binding.h  config.cc  config.h  definitions.h  desktop.cc  desktop.h  enums.h  geometry.cc  geometry.h  main.cc  menu.cc  menu.h  misc.cc  misc.h  process.cc  process.h  socket.cc  socket.h  timer.cc  timer.h  util.cc  util.h  version.h.in  winmgr.cc  winmgr.h  wmcore.cc  wmcore.h  wmfunc.cc  wmfunc.h  wmhints.cc  wmhints.h  xclient.cc  xclient.h  xevents.cc  xevents.h  (+8 more)
